--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio do Astronauta</title>
+    <style>
+        #container {
+            background-image: url('imagens/espaco.jpg');
+            background-size: 100% 100%;
+
+            position: relative;
+            height: 100vh;
+            padding: 10px;
+            margin: auto;
+
+        }
+
+        #conteudo {
+            background-image: url('imagens/astronauta.png');
+            background-size: 100% 100%;
+
+            position: absolute;
+            height: 400px;
+            width: 400px;
+
+            left: 50%;
+            top: 50%;
+
+            transform: translate(-50%, -50%);
+
+        }
+    </style>
 </head>
 <body>
+    <section id="container">
+        <article id="conteudo">
+
+        </article>
+    </section>
     
 </body>
 </html>
